tests/semantic_cases/valid/typed_var_boolean_real_longreal.ob0
MODULE Main;
VAR flag: BOOLEAN;
VAR x: REAL;
VAR y: LONGREAL;
BEGIN
END Main.
